Update of the map

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <hr>
             <h2>About us</h2>
             <p>
-               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Brighton, CO,
+               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Longmont Area, CO,
                you've reached the right spot — our well-regarded garage door repair establishment. Our squad of adept
                technicians carries a wealth of industry experience and stands ready to manage projects of any magnitude.
                In our business, we are experts in a diverse array of garage door repair services. Whether it's
@@ -97,7 +97,7 @@
                proceedings. Beside our repair capacities, we extend installation services for fresh garage doors and
                openers. Our selection solely comprises top-tier products from premier manufacturers, assuring the
                enduring performance of your new garage door or opener. Bid adieu to the strain and vexation linked with
-               a malfunctioning garage door. Waste no time in contacting our Brighton, CO-based garage door repair
+               a malfunctioning garage door. Waste no time in contacting our Longmont Area, CO-based garage door repair
                enterprise to book an appointment, ushering in the revival of optimal garage door functionality.
             </p>
          </div>
@@ -169,22 +169,22 @@
             <h2>Contact us</h2>
             <div id="contact-us-map">
                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89103.74805357258!2d-104.80755964710441!3d39.95982084187436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c6c53b236ab27%3A0xa3a7933ede192173!2sBrighton%2C%20CO!5e0!3m2!1sen!2sus!4v1694274166402!5m2!1sen!2sus"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97591.21903989883!2d-105.18507349801317!3d40.14839574754496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ff16380e6627577%3A0xa62dc4e4a09e6c05!2sArrowhead%20Garage%20Doors%20Repair!5e0!3m2!1sen!2snl!4v1695548266757!5m2!1sen!2snl"
                   style="border:0;" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <h3>Contact</h3>
-            <div class="default-button"><a href="tel:720 637 4921" target="_self">CALL NOW</a>
+            <div class="default-button"><a href="tel:+1-720-637-4921" target="_self">CALL NOW</a>
                <ul>
-                  <li>(720) 990-5273</li>
+                  <li>+1-720-637-4921</li>
                </ul>
             </div>
             <h3>Address</h3>
-            <div class="default-button"><a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" target="_blank">GET
+            <div class="default-button"><a href="https://maps.app.goo.gl/uRu5dDprmBwLnppz7" target="_blank">GET
                   DIRECTIONS</a>
                <div>
                   <ul>
-                     <li>Brighton, Colorado</li>
+                     <li>Longmont Area, Colorado</li>
                      <li>USA</li>
                   </ul>
                </div>
@@ -236,11 +236,11 @@
                      <span class="material-symbols-outlined icons">request_quote</span>
                      <span class="text">Get Qoute</span>
                   </a></div>
-               <div class="action-list-2"><a href="tel:720 637 4921" target="_self">
+               <div class="action-list-2"><a href="tel:+1-720-637-4921" target="_self">
                      <span class="material-symbols-outlined icons">call</span>
                      <span class="text">Call now</span>
                   </a></div>
-               <div class="action-list-2"><a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" id="map-link"
+               <div class="action-list-2"><a href="https://maps.app.goo.gl/uRu5dDprmBwLnppz7" id="map-link"
                      target="_blank">
                      <span class="material-symbols-outlined icons" id="map-icon">map</span>
                      <span class="text">Get Directions</span>
@@ -268,13 +268,13 @@
                </a>
             </div>
             <div class="box">
-               <a href="tel:720 637 4921" target="_self">
+               <a href="tel:+1-720-637-4921" target="_self">
                   <span class="material-symbols-outlined icons">call</span>
                   <span class="text">Call</span>
                </a>
             </div>
             <div class="box">
-               <a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" id="map-link" target="_blank">
+               <a href="https://maps.app.goo.gl/uRu5dDprmBwLnppz7" id="map-link" target="_blank">
                   <span class="material-symbols-outlined icons" id="map-icon">map</span>
                   <span class="text">Directions</span>
                </a>
