Removed Elay from navbar

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
          <div class="navbar">
             <nav class="nav top">
                <div class="" id="hamburger"><button class="menu-toggle">Menu</button></div>
-               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services from Elay</a></div>
+               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services</a></div>
                <div class="action-list-2" id="Quotes"><a href="#" onclick="openQouteForm()">
                      <span class="material-symbols-outlined icons">request_quote</span>
                      <span class="text">Get Qoute</span>
