Typo door instead doors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="keywords" content="Painting, Houses, Home, Garage, Door, GarageDoor, brush, repair, clean, cleaning">
-   <meta name="description" content="Arrowhead Garage Door Services in Colorado, US">
+   <meta name="description" content="Arrowhead Garage Doors Services in Colorado, US">
    <meta name="author" content="Spartak Doe">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Arrowhead Garage Door Services</title>
+   <title>Arrowhead Garage Doors Services</title>
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet" href="hamburger_styles.css">
@@ -58,12 +58,12 @@
             <div class="upper-header">
                <div>
                   <h1 id="Handy-title">
-                     <span>Arrowhead Garage Door Services</span>
+                     <span>Arrowhead Garage Doors Services</span>
                   </h1>
                </div>
                <img src="images/Handy.gif" alt="CompanyLogo">
                <div class="garage">
-                  <span>Garage Door Supplier in Colorado</span>
+                  <span>Garage Doors Supplier in Colorado</span>
                </div>
                <div class="opening-hours">
                </div>
@@ -230,7 +230,7 @@
          <div class="navbar">
             <nav class="nav top">
                <div class="" id="hamburger"><button class="menu-toggle">Menu</button></div>
-               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services</a></div>
+               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Doors Services</a></div>
                <div class="action-list-2" id="Quotes"><a href="#" onclick="openQouteForm()">
                      <span class="material-symbols-outlined icons">request_quote</span>
                      <span class="text">Get Qoute</span>
