--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		
 <!-- Search Engine Optimization by Rank Math - https://rankmath.com/ -->
-<title>Home - Matrix Garage Doors</title>
+<title>Home - Colorado Springs Garage Doors</title>
 <meta name="description" content="Novato, Healdsburg, Cotati, Sebastopol, Forestville, Guerneville, Monte Rio, Jenner, Freestone, Bodega, Bodega Bay, Valley Ford, Tomales, Two Rock, Fort Ross, Inverness, Point Reyes Station"/>
 <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
 <link rel="canonical" href="index.html" />
@@ -867,7 +867,7 @@ At Matrix Garage Doors Repair, we understand that dealing with a stuck or broken
 				</div>
 				<div data-ha-element-link="{&quot;url&quot;:&quot;tel:+1 (720-637-4921)&quot;,&quot;is_external&quot;:&quot;&quot;,&quot;nofollow&quot;:&quot;&quot;,&quot;custom_attributes&quot;:&quot;&quot;}" style="cursor: pointer" class="elementor-element elementor-element-a11d9e6 elementor-widget elementor-widget-text-editor" data-id="a11d9e6" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>3500 S College Ave, Fort Collins, CO 80525, United States</p>						</div>
+							<p>719 N Nevada Ave, Colorado Springs, CO 80903, United States</p>						</div>
 				</div>
 					</div>
 		</div>
